--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,16 @@
 /* Uncomment below if images are way too big.
 Selects all image tags and makes them 500px;
  */
-/*img {*/
-/*  width: 500px;*/
-/*}*/
+img {
+  width: 500px;
+}
+
+.gallery-item {
+
+}
 
 .gallery-container {
-  /* TODO add styles (hint: use flex!) https://www.w3schools.com/cssref/ */
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
